# vgs-chatbot

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LICENSE  QUICK_START.md  README.md  SETUP_GUIDE.md  TODO  TODO.md  check_dependencies.py  configure.py  demo.py  docker-compose.yml  pyproject.toml  pyrightconfig.json  requirements.txt  streamlit_app.py  test_setup.py  test_sharepoint.py  test_sharepoint_minimal.py
.claude/: settings.local.json
.devcontainer/: devcontainer.json
.github/workflows/: streamlit-test.yml
.streamlit/: secrets-example.toml
pages/: 0_Login.py  0_Register.py  1_Chat.py  2_Admin.py
src/vgs-chatbot/: api.py  streamlit_app.py
tests/: test_app_workflow_simulation.py  test_auth_service.py  test_document_processor.py  test_integration.py  test_real_wind_limits_integration.py  test_sharepoint_connector.py  test_wind_limits_integration.py
typings/docx/: __init__.pyi
typings/fastembed/: __init__.pyi
typings/pdfplumber/: __init__.pyi
typings/yake/: __init__.pyi
vector_database/: index.pkl
vgs_chatbot/: __init__.py  config.py  db.py  embeddings.py  ingest.py  kg.py  llm.py  retrieve.py  utils_text.py
vgs_chatbot/gui/: __init__.py  app.py
vgs_chatbot/interfaces/: __init__.py  auth_interface.py  chat_service_interface.py  document_connector_interface.py  document_processor_interface.py
vgs_chatbot/models/: chat.py  document.py  user.py  vector_document.py
vgs_chatbot/repositories/: __init__.py  database.py  document_repository.py  user_repository.py  vector_repository.py
vgs_chatbot/services/: auth_service.py  chat_service.py  document_processor.py  mongodb_document_processor.py  query_expander.py  sharepoint_connector.py
vgs_chatbot/utils/: config.py  manifest.py  retrieval_enhancer.py
