[project]
name = "vgs-chatbot"
version = "0.1.0"
description = "Chatbot for Volunteer Gliding Squadron queries"
authors = [
    {name = "Michael Jennings",email = "mjennings061@gmail.com"}
]
license = {text = "MIT License"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
isort = "^6.0.1"
pytest = "^8.4.1"
ruff = "^0.12.8"
pytest-cov = "^6.2.1"
mypy = "^1.17.1"

