[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vgs-chatbot"
version = "0.1.0"
description = "Knowledge-graph enabled RAG chatbot for RAF 2FTS Viking training materials."
readme = "README.md"
requires-python = ">=3.13,<3.14"
license = { text = "MIT" }
authors = [{ name = "Michael Jennings" }]
dependencies = [
  "streamlit>=1.37",
  "pymongo>=4.7",
  "python-dotenv>=1.0",
  "pdfplumber>=0.11",
  "python-docx>=0.8.11",
  "fastembed>=0.3.4",
  "yake>=0.4.8",
  "pydantic>=2.8",
  "pydantic-settings>=2.3",
  "numpy>=1.26",
  "typing-extensions>=4.12",
  "openai>=1.35",
]

[dependency-groups]
dev = [
    "ruff>=0.14.1",
    "isort>=5.13.2",
    "pre-commit>=4.3.0",
]

[tool.isort]
profile = "black"
line_length = 88
